fix: alp settingのimplicit bindingを解消

--- a/alp-config.yml
+++ b/alp-config.yml
@@ -1,9 +1,11 @@
 matching_groups:
   - /api/condition/[0-9a-z-]+
+  - /api/isu/[0-9a-z-]+/graph
+  - /api/isu/[0-9a-z-]+/icon
   - /api/isu/[0-9a-z-]+
-  - /isu/[0-9a-z-]+
-  - /isu/[0-9a-z-]+/conditition
   - /isu/[0-9a-z-]+/graph
+  - /isu/[0-9a-z-]+/conditition
+  - /isu/[0-9a-z-]+
   - /assets/*
 sort: avg
 reverse: true
